--- a/asset/css/mystyle.css
+++ b/asset/css/mystyle.css
@@ -82,3 +82,16 @@
     margin-right: 50px;
     margin-top: 50px;
 }
+
+.details {
+    font-family: 'Oregano', cursive;
+    font-size: 30px;
+    max-width: 500px;
+    max-height: 500px;
+    padding-bottom: 20px;
+}
+
+.title {
+    font-family: 'Bangers', cursive;
+    font-size:65px;
+}
